--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,65 @@
-<h1>
-  {{title}}
-</h1>
+<header class="header">
+  <div class="header__bg clearfix">
+    <div class="header__bg--img">
+      <div class="container">
+        <div class="header__logo-group">
+          <h1 class="header__logo flex-box">
+            <img src="./assets/slice/logo.png">
+            <p class="header__logo--text">Al Fresco's</p>
+          </h1>
+        </div>
+        <div class="header__btn-group flex-box">
+          <button class="header__btn-login" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
+          <button class="header__btn-login" (click)="auth.logout()" *ngIf="auth.authenticated()">Log Out</button>
+          <!--<a href="#" id="logged-in" class="header__btn-login"> Login </a>-->
+          <input type="button" class="btn btn-default header__btn-waiter" value="Waiter">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header__bg header__bg--bottom"></div>
+</header>
+
+<div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="loginLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content login">
+      <div class="modal-header login__header flex-box">
+        <h2 class="login__title">Log in</h2>
+        <button type="button" class="close login__close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body login__body">
+        <form action="#" class="form-horizontal">
+          <div class="form-group">
+            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox"> Remember me
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-default">Sign in</button>
+            </div>
+          </div>
+          <button class="btn btn-primary btn-margin" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
+          <button class="btn btn-primary btn-margin" (click)="auth.logout()" *ngIf="auth.authenticated()">Log Out</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<router-outlet></router-outlet>
