--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -174,3 +174,80 @@
     padding: 5px;
   }
 }
+
+.show-detail {
+  background: #FFFBCE;
+  padding: 0;
+  &__img {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    width: 216px;
+    &--food {
+      // width: 100%;
+    }
+  }
+  &__info {
+    background: url("../../assets/slice/bg-ordering.png") no-repeat;
+    display: table-cell;
+    vertical-align: middle;
+    height: 199px;
+    width: 384px;
+    img {
+      box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+    }
+  }
+  &__content {
+    background: url("../../assets/slice/bg-show-detail.png") no-repeat;
+    height: 200px;
+    margin-left: 5%;
+    transform: scale(0.9);
+    padding: 10px;
+    text-align: center;
+  }
+  &__number {
+    width: 32px;
+    height: 32px;
+    border: 1px solid $cl-btn-menu;
+    text-align: center;
+  }
+  &__btn-arrow {
+    background: $cl-btn-menu;
+    border: none;
+    border-radius: 50%;
+    margin: 0 10px;
+  }
+  &__quanity {
+    justify-content: center;
+  }
+  &__price {
+    padding-right: 15px;
+    margin: 3px 0;
+  }
+  &__btn {
+    margin-top: 10px;
+  }
+}
+
+.show-suggest {
+  margin-top: 10px;
+  background: #FFFBCE;
+  &__text,
+  &__content {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    padding: 0 10px;
+  }
+  &__food {
+    display: inline-block;
+    text-align: center;
+    padding: 5px;
+  }
+}
+
+.modal-detail {
+  background: none;
+  border: none;
+  box-shadow: none;
+}
