--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -39,13 +39,13 @@
 
                   <div class="col-xs-10">
                     <div class="menu__board overfollow">
-                      <div class="col-xs-4" >
+                      <div class="col-xs-4" *ngFor="let afood of food" >
                         <div class="row">
                           <a href="#" class="food__name">
                             <img class="food__img" src="../../assets/slice/food.png" alt="">
                             <div class="food__board">
-                              <p class="food__board--name">Cake</p>
-                              <p class="food__board--price">20.000 d</p>
+                              <p class="food__board--name">{{afood.name}}</p>
+                              <p class="food__board--price">{{afood.price}}</p>
                             </div>
                           </a>
                         </div>
@@ -119,14 +119,49 @@
 <!--modal show choose a food-->
 <div class="modal fade" id="detailFood" tabindex="-1" role="dialog" aria-labelledby="detailFoodLabel">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
+    <div class="modal-content modal-detail">
+      <!--<div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      </div>
-      <div class="modal-body">
+      </div>-->
+      <div class="modal-body show-detail overfollow">
+        <div class="show-detail__img">
+          <img class="show-detail__img--food" src="../../assets/slice/food.png" alt="">
+        </div>
 
+        <div class="show-detail__info">
+          <div class="show-detail__content">
+            <h2>Pizza</h2>
+            <p class="show-detail__disc">Information detail for this food</p>
+            <div class="show-detail__quanity flex-box">
+              <p class="show-detail__price">50.000d</p>
+              <div class="show-detail__choosing flex-box">
+                <button type="button" class="show-detail__btn-arrow icon-arrow-up"></button>
+                <input type="text" class="show-detail__number" value="1">
+                <button type="button" class="show-detail__btn-arrow icon-arrow-down"></button>
+              </div>
+            </div>
+            <div class="show-detail__btn ">
+              <a href="#" class="btn--suggest">Ok</a>
+              <a href="#" class="btn--normal">Cancel</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-body show-suggest overfollow">
+        <div class="show-suggest__text">
+          <p>Should eat it with these food</p>
+        </div>
+        <div class="show-suggest__content">
+          <div class="show-suggest__food">
+            <img src="../../assets/slice/food.png" alt="">
+            <p>Pizza</p>
+          </div>
+          <div class="show-suggest__food">
+            <img src="../../assets/slice/food.png" alt="">
+            <p>Pizza</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-
 </div>
