--- a/src/app/helper/_modules.scss
+++ b/src/app/helper/_modules.scss
@@ -1,9 +1,9 @@
 .btn--normal {
-  border-radius: 35%;
-  background: $cl-btn-cancel;
+  color: #9a847c;
+  background: #eae3d5;
   padding: 5px 10px;
-  color: $cl-dark;
   display: inline-block;
+  border-radius: 3px;
 }
 
 .btn--suggest {
