--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
           <div class="menu__bg">
                 <form class="search">
                   <div class="search__group">
-                    <input type="text" class="search__box" placeholder="Search">
+                    <input type="text" class="search__box" placeholder="Search" [(ngModel)]="name">
                     <button type="submit" class="btn btn-default search__btn icon-search"></button>
                   </div>
                 </form>
@@ -13,22 +13,22 @@
                 <div class="food overfollow">
                   <div class="col-xs-2">
                     <div class="row">
-                      <a href="#" class="btn-menu">
+                      <a (click) = "getFood(1)" class="btn-menu">
                         <div class="btn-menu__img">
                           <p class="btn-menu__text">Bakery</p>
                         </div>
                       </a>
-                      <a href="#" class="btn-menu">
+                      <a (click) = "getFood(2)" class="btn-menu">
                         <div class="btn-menu__img">
                           <p class="btn-menu__text">Bakery</p>
                         </div>
                       </a>
-                      <a href="#" class="btn-menu">
+                      <a (click) = "getFood(3)" class="btn-menu">
                         <div class="btn-menu__img">
                           <p class="btn-menu__text">Bakery</p>
                         </div>
                       </a>
-                      <a href="#" class="btn-menu">
+                      <a (click) = "getFood(4)" class="btn-menu">
                         <div class="btn-menu__img">
                           <p class="btn-menu__text">Bakery</p>
                         </div>
@@ -39,37 +39,14 @@
 
                   <div class="col-xs-10">
                     <div class="menu__board overfollow">
-                      <div class="col-xs-4" *ngFor="let afood of food" >
+
+                      <div class="col-xs-4" *ngFor="let afood of food | filter: afood.name | filter: name" >
                         <div class="row">
-                          <a href="#" class="food__name">
+                          <a (click) = "getDetail(afood)" class="food__name" data-toggle="modal" data-target="#detailFood">
                             <img class="food__img" src="../../assets/slice/food.png" alt="">
                             <div class="food__board">
                               <p class="food__board--name">{{afood.name}}</p>
                               <p class="food__board--price">{{afood.price}}</p>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div class="col-xs-4" >
-                        <div class="row">
-                          <a class="food__name" data-toggle="modal" data-target="#detailFood">
-                            <img class="food__img" src="../../assets/slice/food.png" alt="">
-                            <div class="food__board">
-                              <p class="food__board--name">Cake</p>
-                              <p class="food__board--price">20.000 d</p>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div class="col-xs-4" >
-                        <div class="row">
-                          <a href="#" class="food__name">
-                            <img class="food__img" src="../../assets/slice/food.png" alt="">
-                            <div class="food__board">
-                              <p class="food__board--name">Cake</p>
-                              <p class="food__board--price">20.000 d</p>
                             </div>
                           </a>
                         </div>
@@ -86,17 +63,32 @@
               <div class="ordering__box--inner">
                 <h2 class="ordering__title">Ordering</h2>
                 <div class="ordering__food">
-                  <div class="ordering__food--text ordered__food flex-box">
-                    <p class="ordered__food--order">1</p>
-                    <p class="ordered__food--name">Noodle</p>
-                    <p class="ordered__food--quantity">2</p>
-                    <p class="ordered__food--price">90.000 d</p>
+                  <a class="ordering__btn-ordered" role="button" data-toggle="collapse" href="#ordered-food__wrap" aria-expanded="false" aria-controls="ordered-food__wrap">
+                    &rsaquo; Ordered
+                  </a>
+
+                  <div id="ordered-food__wrap" class="collapse">
+                    <!--food that ordered will be put here-->
                   </div>
-                  <div class="ordering__food--text ordered__food flex-box">
-                    <p class="ordered__food--order">1</p>
+
+                  <!--food ordering-->
+                  <div class="ordering__food--text ordered__food flex-box food1">
                     <p class="ordered__food--name">Noodle</p>
                     <p class="ordered__food--quantity">2</p>
                     <p class="ordered__food--price">90.000 d</p>
+                    <button (click)="clearFood('food1')" class="ordered__food--clear">x</button>
+                  </div>
+                  <div class="ordering__food--text ordered__food flex-box food2">
+                    <p class="ordered__food--name">Noodle</p>
+                    <p class="ordered__food--quantity">1</p>
+                    <p class="ordered__food--price">30.000 d</p>
+                    <button (click)="clearFood('food2')" class="ordered__food--clear">x</button>
+                  </div>
+                  <div class="ordering__food--text ordered__food flex-box food3">
+                    <p class="ordered__food--name">Hamberger</p>
+                    <p class="ordered__food--quantity">2</p>
+                    <p class="ordered__food--price">90.000 d</p>
+                    <button (click)="clearFood('food3')" class="ordered__food--clear">x</button>
                   </div>
                 </div>
                 <div class="ordering__total overfollow">
@@ -105,8 +97,8 @@
                   </p>
                 </div>
                 <div class="ordering__btn">
-                  <a href="#" class="ordering__btn--order btn--suggest">Order</a>
-                  <a href="#" class="ordering__btn--cancel btn--normal">Cancel</a>
+                  <a (click)="ordered()" class="ordering__btn--order btn--suggest">Order</a>
+                  <a href="#" class="ordering__btn--payment btn--normal">Payment</a>
                 </div>
               </div>
             </div>
@@ -123,7 +115,7 @@
       <!--<div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>-->
-      <div class="modal-body show-detail overfollow">
+      <div class="modal-body show-detail overfollow" *ngIf="afood">
         <div class="show-detail__img">
           <img class="show-detail__img--food" src="../../assets/slice/food.png" alt="">
         </div>
@@ -131,18 +123,18 @@
         <div class="show-detail__info">
           <div class="show-detail__content">
             <h2>Pizza</h2>
-            <p class="show-detail__disc">Information detail for this food</p>
+            <p class="show-detail__disc">{{afood.detail}}</p>
             <div class="show-detail__quanity flex-box">
-              <p class="show-detail__price">50.000d</p>
+              <p class="show-detail__price" >{{afood.price}}</p>
               <div class="show-detail__choosing flex-box">
-                <button type="button" class="show-detail__btn-arrow icon-arrow-up"></button>
-                <input type="text" class="show-detail__number" value="1">
-                <button type="button" class="show-detail__btn-arrow icon-arrow-down"></button>
+                <button (click) = "quantityUp()" id="btn-up" type="button" class="show-detail__btn-arrow icon-arrow-up"></button>
+                <input id="quantity" type="text" [(ngModel)] = "quantity" class="show-detail__number" >
+                <button (click) = "quantityDown()" id="btn-down" type="button" class="show-detail__btn-arrow icon-arrow-down"></button>
               </div>
             </div>
             <div class="show-detail__btn ">
-              <a href="#" class="btn--suggest">Ok</a>
-              <a href="#" class="btn--normal">Cancel</a>
+              <a (click)="ordering(afood)" class="btn--suggest">Ok</a>
+              <a (click)="cancel()" class="btn--normal close" data-dismiss="modal" aria-label="Close">Cancel</a>
             </div>
           </div>
         </div>
