--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -130,9 +130,10 @@
 .ordering {
   background: $cl-bg-menu;
   &__box {
-    background: $cl-white;
+    background: #FFFBCE;
     padding: 10px;
     &--inner {
+      background: $cl-white;
       border: 1px solid $cl-gray;
       // padding: 10px;
       border-radius: 4px;
@@ -151,6 +152,10 @@
     &--text {
       float: right;
     }
+    &--money {
+      font-weight:bold;
+      color: #a02e0a;
+    }
   }
   &__btn {
     padding-right: 10px;
@@ -160,10 +165,15 @@
       margin-right: 5px;
     }
   }
+
+  &__btn-ordered {
+    font-weight: bold;
+    color: #a02e0a;
+  }
 }
 
 .ordered__food {
-  &--order,
+  &--clear,
   &--quantity {
     flex: 1;
     padding: 5px;
@@ -172,6 +182,24 @@
   &--price {
     flex: 4;
     padding: 5px;
+  }
+  &--name {
+    font-weight: bold;
+  }
+  &--clear {
+    padding: 0 1px;
+    background: none;
+    border-radius: 100%;
+    height: 22px;
+    width: 22px;
+    border: 1px solid #ccc;
+    color: #ccc;
+    &:active,
+    &:hover,
+    &:focus {
+      color: #fbcdbc;
+      border-color: #fbcdbc;
+    }
   }
 }
 
@@ -250,4 +278,8 @@
   background: none;
   border: none;
   box-shadow: none;
+}
+
+.inner-odered {
+  color: tan;
 }
