--- a/src/assets/bootstrap-theme/_bootstrap.scss
+++ b/src/assets/bootstrap-theme/_bootstrap.scss
@@ -10,3 +10,4 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
