--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -17,7 +17,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse menu" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav menu__wrap">
-                <li class="menu__item--active menu__item"><a href="#">Home </a></li>
+                <li class="menu__item--active menu__item"><a routerLink="/admin">Home </a></li>
                 <li class="dropdown menu__item">
                   <a  class="dropdown-toggle" >Statistic <span class="caret"></span></a>
                   <ul class="dropdown-menu sub-menu">
