--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -39,7 +39,7 @@
 
                   <div class="col-xs-10">
                     <div class="menu__board overfollow" [componentFood]="food">
-                      <div class="col-xs-4" *ngFor="let afood of food " >
+                      <div class="col-xs-4" *ngFor="let afood of food | paginate: {itemsPerPage: 3, currentPage: page}" >
                         <div class="row">
                           <a (click) = "getDetail(afood)" class="food__name" data-toggle="modal" data-target="#detailFood">
                             <img class="food__img" src="../../assets/slice/food.png" alt="">
@@ -50,6 +50,9 @@
                           </a>
                         </div>
                       </div>
+
+                      <!--paging-->
+					            <pagination-controls style="font-size:15px;" (pageChange)="page = $event" #api> </pagination-controls>
                     </div>
                   </div>
                 </div>
