--- a/src/app/helper/_placeholder.scss
+++ b/src/app/helper/_placeholder.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/src/app/helper/icomoon/icomoon.eot?cikdlj');
-  src:  url('/src/app/helper/icomoon/icomoon.eot?cikdlj#iefix') format('embedded-opentype'),
-    url('/src/app/helper/icomoon/icomoon.ttf?cikdlj') format('truetype'),
-    url('/src/app/helper/icomoon/icomoon.woff?cikdlj') format('woff'),
-    url('/src/app/helper/icomoon/icomoon.svg?cikdlj#icomoon') format('svg');
+  src:  url('/src/app/helper/icomoon/icomoon.eot?hrbv6p');
+  src:  url('/src/app/helper/icomoon/icomoon.eot?hrbv6p#iefix') format('embedded-opentype'),
+    url('/src/app/helper/icomoon/icomoon.ttf?hrbv6p') format('truetype'),
+    url('/src/app/helper/icomoon/icomoon.woff?hrbv6p') format('woff'),
+    url('/src/app/helper/icomoon/icomoon.svg?hrbv6p#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
