--- a/src/app/statistic/statistic.component.html
+++ b/src/app/statistic/statistic.component.html
@@ -1,21 +1,63 @@
-<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">{{title}}</h4>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="hideChildModal()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <ng-content select=".modal-body"> </ng-content>
-      </div>
-
-      <div class="modal-footer">
-        <div class="pull-left">
-          <button class="btn btn-default" (click)="hide()"> Cancel </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<p>Hello world</p>
+<table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th>No</th>
+                    <th>Day</th>
+                    <th>Time</th>
+                    <th>Name</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>15/03/2017</td>
+                    <td>8:00PM</td>
+                    <td>Pizza</td>
+                    <td>2</td>
+                    <td>300.000 d</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>15/03/2017</td>
+                    <td>8:00PM</td>
+                    <td>Pizza</td>
+                    <td>2</td>
+                    <td>300.000 d</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>15/03/2017</td>
+                    <td>8:00PM</td>
+                    <td>Pizza</td>
+                    <td>2</td>
+                    <td>300.000 d</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>15/03/2017</td>
+                    <td>8:00PM</td>
+                    <td>Pizza</td>
+                    <td>2</td>
+                    <td>300.000 d</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>15/03/2017</td>
+                    <td>8:00PM</td>
+                    <td>Pizza</td>
+                    <td>2</td>
+                    <td>300.000 d</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>15/03/2017</td>
+                    <td>8:00PM</td>
+                    <td>Pizza</td>
+                    <td>2</td>
+                    <td>300.000 d</td>
+                  </tr>
+                </tbody>
+              </table>
