--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
       <div class="footer-group">
         <a href="#" class="icon-home3 icon-outer"></a>
         <a href="#" class="icon-home3 icon-middle"></a>
-        <a routerLink="/user" class="icon-home3 icon-outer"></a>
+        <a routerLink="/user/profile" class="icon-home3 icon-outer"></a>
       </div>
     </div>
   </div>
