--- a/src/app/helper/_placeholder.scss
+++ b/src/app/helper/_placeholder.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/src/app/helper/icomoon/icomoon.eot?hrbv6p');
-  src:  url('/src/app/helper/icomoon/icomoon.eot?hrbv6p#iefix') format('embedded-opentype'),
-    url('/src/app/helper/icomoon/icomoon.ttf?hrbv6p') format('truetype'),
-    url('/src/app/helper/icomoon/icomoon.woff?hrbv6p') format('woff'),
-    url('/src/app/helper/icomoon/icomoon.svg?hrbv6p#icomoon') format('svg');
+  src:  url('/src/app/helper/icomoon/icomoon.eot?6xfivd');
+  src:  url('/src/app/helper/icomoon/icomoon.eot?6xfivd#iefix') format('embedded-opentype'),
+    url('/src/app/helper/icomoon/icomoon.ttf?6xfivd') format('truetype'),
+    url('/src/app/helper/icomoon/icomoon.woff?6xfivd') format('woff'),
+    url('/src/app/helper/icomoon/icomoon.svg?6xfivd#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -27,11 +27,23 @@
 .icon-home3:before {
   content: "\e902";
 }
+.icon-pencil:before {
+  content: "\e905";
+}
 .icon-mic:before {
   content: "\e91e";
 }
 .icon-phone:before {
   content: "\e942";
+}
+.icon-envelop:before {
+  content: "\e945";
+}
+.icon-location:before {
+  content: "\e947";
+}
+.icon-user:before {
+  content: "\e971";
 }
 .icon-search:before {
   content: "\e986";
