--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -6,8 +6,8 @@
           <div class="row">
             <div class="user__menu">
               <a routerLink="/user/profile" class="menu__profile">Profile</a>
-              <a href="#" class="menu__history">History</a>
-              <a href="#" class="menu__favorite">Profile</a>
+              <a routerLink="/user/history" class="menu__history">History</a>
+              <a href="#" class="menu__favorite">Favorite</a>
             </div>
           </div>
         </div>
