--- a/src/app/user-history/user-history.component.html
+++ b/src/app/user-history/user-history.component.html
@@ -1,3 +1,62 @@
-<p>
-  user-history works!
-</p>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>No</th>
+      <th>Day</th>
+      <th>Time</th>
+      <th>Name</th>
+      <th>Quantity</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>15/03/2017</td>
+      <td>8:00PM</td>
+      <td>Pizza</td>
+      <td>2</td>
+      <td>300.000 d</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>15/03/2017</td>
+      <td>8:00PM</td>
+      <td>Pizza</td>
+      <td>2</td>
+      <td>300.000 d</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>15/03/2017</td>
+      <td>8:00PM</td>
+      <td>Pizza</td>
+      <td>2</td>
+      <td>300.000 d</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>15/03/2017</td>
+      <td>8:00PM</td>
+      <td>Pizza</td>
+      <td>2</td>
+      <td>300.000 d</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>15/03/2017</td>
+      <td>8:00PM</td>
+      <td>Pizza</td>
+      <td>2</td>
+      <td>300.000 d</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>15/03/2017</td>
+      <td>8:00PM</td>
+      <td>Pizza</td>
+      <td>2</td>
+      <td>300.000 d</td>
+    </tr>
+  </tbody>
+</table>
