--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -2,17 +2,23 @@
   <div class="col-xs-12 profile-group">
     <img class="profile-qrcode" src="./../../assets/slice/qr-code.jpg" alt="">
     <div class="profile-info">
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+      <form action="#">
+        <div class="form-group profile-line">
+          <input type="email" class="form-control profile-email" readonly value="user@gmail.com" name="email" [(ngModel)]="email">
+          <i class="icon-envelop profile-icon"></i>
+          <button (click)="edit('email')" class="btn btn-default icon-pencil profile-edit"></button>
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <div class="form-group profile-line">
+          <input type="name" class="form-control profile-name" placeholder="Name" readonly value="User" name="name" [(ngModel)]="name">
+          <i class="icon-user profile-icon"></i>
+          <button (click)="edit('name')" class="btn btn-default icon-pencil profile-edit"></button>
         </div>
-
-        <button type="submit" class="btn btn-default">Submit</button>
+        <div class="form-group profile-line">
+          <input type="password" class="form-control profile-password" placeholder="Password" readonly value="123456" name="password" [(ngModel)]="password">
+          <i class="icon-key profile-icon"></i>
+          <button (click)="edit('password')" class="btn btn-default icon-pencil profile-edit"></button>
+        </div>
+        <button type="submit" (click)="saveProfile()" class="btn btn-default profile-btn">Save</button>
       </form>
     </div>
   </div>
