--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -22,8 +22,8 @@
                   <a  class="dropdown-toggle" >Statistic <span class="caret"></span></a>
                   <ul class="dropdown-menu sub-menu">
                     <li><a routerLink ="/admin/statistic-drink">Drink</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Total money</a></li>
+                    <li><a routerLink ="/admin/statistic-money">Service</a></li>
+                    <li><a routerLink ="/admin/statistic-money">Total money</a></li>
                   </ul>
                 </li>
                 <li class="menu__item"><a href="#">Promotion</a></li>
