--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
   </div>
   <div class="header__bg header__bg--bottom"></div>
 </header>
+
 <router-outlet></router-outlet>
 
 <!--add footer here-->
@@ -27,9 +28,9 @@
   <div class="container">
     <div class="row">
       <div class="footer-group">
-        <a href="#" class="icon-home3 icon-outer"></a>
+        <a routerLink="/history/food" class="icon-location icon-outer"></a>
         <a href="#" class="icon-home3 icon-middle"></a>
-        <a routerLink="/user/profile" class="icon-home3 icon-outer"></a>
+        <a routerLink="/userprofile" class="icon-user icon-outer"></a>
       </div>
     </div>
   </div>
