--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -5,8 +5,8 @@
         <div class="col-xs-2">
           <div class="row">
             <div class="user__menu">
-              <a routerLink="/user/profile" class="menu__profile">Profile</a>
-              <a routerLink="/user/history" class="menu__history">History</a>
+              <a routerLink="/history/food" class="menu__profile">Food</a>
+              <a routerLink="/history/invoice" class="menu__history">Invoice</a>
               <a href="#" class="menu__favorite">Favorite</a>
             </div>
           </div>
