--- a/src/app/ad-statistic-drink/ad-statistic-drink.component.html
+++ b/src/app/ad-statistic-drink/ad-statistic-drink.component.html
@@ -1,4 +1,4 @@
-<h2>Pie Chart</h2>
+<h2 style="margin-left: 20px">Statistic by food</h2>
 <!--<div>{{pie_ChartData}}</div>-->
 <div *ngIf="pie_ChartData" id="pie_chart" [chartData]="pie_ChartData" [chartOptions] = "pie_ChartOptions"
 chartType="PieChart" GoogleChart></div>
