--- a/src/app/helper/_placeholder.scss
+++ b/src/app/helper/_placeholder.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/src/app/helper/icomoon/icomoon.eot?6xfivd');
-  src:  url('/src/app/helper/icomoon/icomoon.eot?6xfivd#iefix') format('embedded-opentype'),
-    url('/src/app/helper/icomoon/icomoon.ttf?6xfivd') format('truetype'),
-    url('/src/app/helper/icomoon/icomoon.woff?6xfivd') format('woff'),
-    url('/src/app/helper/icomoon/icomoon.svg?6xfivd#icomoon') format('svg');
+  src:  url('/src/app/helper/icomoon/icomoon.eot?ennpdq');
+  src:  url('/src/app/helper/icomoon/icomoon.eot?ennpdq#iefix') format('embedded-opentype'),
+    url('/src/app/helper/icomoon/icomoon.ttf?ennpdq') format('truetype'),
+    url('/src/app/helper/icomoon/icomoon.woff?ennpdq') format('woff'),
+    url('/src/app/helper/icomoon/icomoon.svg?ennpdq#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -42,11 +42,23 @@
 .icon-location:before {
   content: "\e947";
 }
+.icon-history:before {
+  content: "\e94d";
+}
 .icon-user:before {
   content: "\e971";
 }
 .icon-search:before {
   content: "\e986";
+}
+.icon-key:before {
+  content: "\e98d";
+}
+.icon-star-empty:before {
+  content: "\e9d7";
+}
+.icon-star-full:before {
+  content: "\e9d9";
 }
 .icon-arrow-up:before {
   content: "\ea32";
