Implement social account login feature

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -45,7 +45,7 @@
                             <img class="food__img" src="../../assets/slice/food.png" alt="">
                             <div class="food__board">
                               <p class="food__board--name">{{afood.name}}</p>
-                              <p class="food__board--price">{{afood.price}}</p>
+                              <p class="food__board--price">{{afood.price}} d</p>
                             </div>
                           </a>
                         </div>
