--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,8 +73,9 @@
           </div>
         </form>
         <div class="btn-social overfollow">
-          <a href="#" class="col-xs-10 col-xs-offset-1 btn btn-primary btn-social__fb">Login with Facebook</a>
-          <a href="#" class="col-xs-10 col-xs-offset-1 btn btn-danger btn-social__gg">Login with Google</a>
+          <a href="#" class="col-xs-10 col-xs-offset-1 btn btn-primary btn-social__fb" (click)="facebookLogin()">Login with Facebook</a>
+          <!-- <a href="#" class="col-xs-10 col-xs-offset-1 btn btn-danger btn-social__gg">Login with Google</a> -->
+          <app-google-sign-in></app-google-sign-in>
         </div>
       </div>
     </div>
